# splash_timepix

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  PLAN.md  README.md  SOCKET_SERVER_README.md  demo.py  noxfile.py  pyproject.toml  pytest.ini  report04-23-2025.md  solution.md
.github/workflows/: release.yml  test.yml
ASI/: README.md
ASI/live-cli_alpha-1/: test.py.example
ASI/serval_client/: acq.py  lib.py  poll.py  stop.py
info/: IMPLEMENTATION_OVERVIEW.md  SAMPLE_START_MESSAGE.md  SOCKET_SERVER_README.md  TESTING_GUIDE.md  UDP_RECEIVER_BUFFER_LIMITS.md  centroider_tutorial.md  report04242026.md
scripts/: flush_pacing_listener.py  install_desktop_integration.sh  precommit_pytest.sh  run_sniff_experiment.sh  run_sniff_sweep.sh  sniff_analyze.py  tpxacq_launcher.sh  tpxui_launcher.sh
scripts/sniffing/: flush_pacing_listener.py  run_sniff_experiment.sh  run_sniff_sweep.sh  sniff_analyze.py
src/_tests/: test_socket_server.py
src/splash_timepix/: __init__.py  acquisition_start.py  acquisition_stop.py  app.py  example.py  example_listener.py  example_zmq_sub.py  heartbeat.py  listener.py  parser.py  parser_np.py  schemas.py  simulator.py  simulator_cli.py  socket_server.py  socket_server_np.py  test_client.py  test_source.py  test_zmq_sub.py  workers.py
src/splash_timepix/serval_client/: __init__.py  acq.py  lib.py  poll.py  stop.py
src/splash_timepix/ui/: __init__.py  alignment_tab.py  centroider_tab.py  engineering_tab.py  log_manager.py  main.py  operator_tab.py  preferences.py  single_instance.py  theme.py  timeline_tab.py  widgets.py  workers.py
tests/: conftest.py  port_utils.py  test_flush_burstiness.py  test_log_manager.py  test_main_workflow.py  test_parser.py  test_preferences.py  test_simulator.py  test_simulator_batching.py  test_single_instance.py  test_socket_server.py  test_start_stop_messages.py  test_start_stop_quick.py
tools/centroider/: README.md  api.py  centroider.md  histogramify.py  progress.py  run_example.sh  runner.py  sweep.py
tools/dev/: precommit_lint.sh
tools/diagnostics/: flush_burstiness.py
tools/sniffer/: README.md  flush_pacing_listener.py  run_sniff_experiment.sh  run_sniff_sweep.sh  sniff_analyze.py
tools/ui/: install_desktop_integration.sh  tpxui_launcher.sh
