# Build system configuration
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splash_timepix"
version = "0.0.1"
description = "Code to stream from timepix"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["timepix", "socket", "server", "data-streaming", "numpy"]
authors = [{ name = "Johannes Mahl", email = "jmahl@lbl.gov" }]
maintainers = [{ name = "Johannes Mahl", email = "jmahl@lbl.gov" }]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["check-manifest", "pytest", "pre-commit", "black", "flake8", "isort"]
test = ["pytest", "pytest-cov", "coverage"]

[project.urls]
"Homepage" = "https://github.com/als-computing/splash_timepix"
"Bug Reports" = "https://github.com/als-computing/splash_timepix/issues"
"Source" = "https://github.com/als-computing/splash_timepix"

[project.scripts]
splash-timepix-demo = "splash_timepix.example:main"

[tool.setuptools]
package-dir = {"" = "src"}

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src/_tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests that require network access",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "D"]
max-complexity = 15
exclude = ["src/_tests/"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D104", "D100"]
match_dir = "(?!tests).*"
