# Build system configuration
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splash_timepix"
version = "0.6.3"
description = "Code to stream from timepix"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["timepix", "socket", "server", "data-streaming", "numpy"]
authors = [
  { name = "Johannes Mahl", email = "jmahl@lbl.gov" },
  { name = "Gabriel Gazolla", email = "gabrielgazolla@lbl.gov" },
  { name = "Dylan McReynolds", email = "dmcreynolds@lbl.gov" },
]
maintainers = [{ name = "Johannes Mahl", email = "jmahl@lbl.gov" }]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["numpy", "h5py", "typer", "psutil", "opencv-python", "pyzmq", "msgpack", "requests", "pydantic"]

[project.optional-dependencies]
ui = ["PySide6>=6.5.0", "pyqtgraph>=0.13"]
# Pin linters to match .pre-commit-config.yaml (avoids CI vs local version drift).
dev = [
  "check-manifest",
  "pytest",
  "pre-commit",
  "black==24.4.2",
  "flake8==7.1.0",
  "isort==5.13.2",
]
test = ["pytest", "pytest-cov", "coverage"]

[project.urls]
"Homepage" = "https://github.com/als-computing/splash_timepix"
"Bug Reports" = "https://github.com/als-computing/splash_timepix/issues"
"Source" = "https://github.com/als-computing/splash_timepix"

[project.scripts]
tpx-stream = "splash_timepix.app:app"
tpx-ui = "splash_timepix.ui.main:main"
tpx-sim = "splash_timepix.simulator_cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"splash_timepix.ui" = ["assets/*.png"]

# Tool configurations
[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
    "-m", "not slow"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests that require network access",
]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D104", "D100"]
match_dir = "(?!tests).*"
